# ros_QP_assignment

./: .clang-format  CMakeLists.txt  README.md  dockerfile  package.xml
include/ros_QP_assignment/: Optimizer.hpp
include/ros_qp_assignment/: Optimizer.hpp  QuadraticCoeffs.hpp  UnconstrainedQP.hpp  quadratic_coeffs.hpp  types.hpp  unconstr_quadratic.hpp  unconstrained_qp.hpp
launch/: simple_test.launch
scripts/: install_dependencies.sh
src/: optimizer_main.cpp  talker_node.cpp
test/: ceres_test.cpp  quadratic_test.cpp
