<?xml version="1.0"?>
<package format="2">
  <name>ros_QP_assignment</name>
  <version>0.0.0</version>
  <description> Ros package for quadratic optimization with Ceres </description>
  <maintainer email="tiryaki@is.mpg.de">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ceres</depend>
  <depend>eigen</depend>


</package>
